Ajuste a nivel de Log y modelo de BD
